<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.asipsante.api.sign</groupId>
	<artifactId>esignsante-webservices</artifactId>
	<packaging>jar</packaging>
	<name>esignsante-webservices</name>
	<version>3.0.0.0-SNAPSHOT</version>
	<properties>
		<java.version>1.8</java.version>
		<dss.version>5.5</dss.version>
		<asipsign.version>3.0.0.0-SNAPSHOT</asipsign.version>
		<springfox-version>2.9.2</springfox-version>
		<servlet-api.version>4.0.1</servlet-api.version>
		<start-class>fr.asipsante.api.sign.ws.Application</start-class>
		<dist>docker</dist>
	</properties>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.6</version>
	</parent>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/resources/${dist}</directory>
			</resource>
		</resources>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testResources>
			<testResource>
				<directory>src/test/resources/certificats</directory>
			</testResource>
			<testResource>
				<directory>src/test/resources/fichiers</directory>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.properties</include>
					<include>*.sh</include>
					<include>*.json</include>
				</includes>
			</testResource>
		</testResources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.7.0.1746</version>
				</plugin>
			<!--	<plugin>
					<groupId>org.jboss.maven.plugins</groupId>
					<artifactId>bom-builder-maven-plugin</artifactId>
					<version>1.2.0</version>
					<executions>
						<execution>
							<id>build-bom</id>
							<goals>
								<goal>build-bom</goal>
							</goals>
							<configuration>
								<bomGroupId>fr.ans.api</bomGroupId>
								<bomArtifactId>esignsante-webservices</bomArtifactId>
								<bomVersion>1.0.0</bomVersion>
								<bomName>ESignSante BOM</bomName>
								<bomDescription>ESignSante BOM</bomDescription>
							</configuration>
						</execution>
					</executions>
				</plugin>-->
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<header>licence-header.txt</header>
					<includes>
						<include>**/*.java</include>
						<include>**/*.properties</include>
					</includes>
					<strictCheck>true</strictCheck>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<executions>
					<execution>
						<configuration>
							<forkCount>1</forkCount>
							<reuseForks>false</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>4.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/esignsante-ws.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<library>spring-boot</library>
							<ignoreFileOverride>${project.basedir}/.openapi-generator-ignore</ignoreFileOverride>
							<configOptions>
								<basePackage>fr.asipsante.api.sign.ws</basePackage>
								<configPackage>fr.asipsante.api.sign.config</configPackage>
								<modelPackage>fr.asipsante.api.sign.ws.model</modelPackage>
								<apiPackage>fr.asipsante.api.sign.ws.api</apiPackage>
								<sourceFolder>src/main/java</sourceFolder>
								<dateLibrary>threetenbp</dateLibrary>
								<delegatePattern>true</delegatePattern>
								<useBeanValidation>true</useBeanValidation>
								<skipOverwrite>true</skipOverwrite>
								<disableHtmlEscaping>true</disableHtmlEscaping>
								<implicitHeaders>true</implicitHeaders>
							</configOptions>
							<withXml>true</withXml>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/install.xml</descriptor>
						<descriptor>src/main/assembly/directories.xml</descriptor>
					</descriptors>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>		
		</plugins>
	</build>
	<dependencies>
		<!--The vintage engine allows tests written with JUnit 4 to be run by JUnit 
			5. It would be a good idea to migrate your tests to JUnit 5 -->
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.hamcrest</groupId>
					<artifactId>hamcrest-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>			
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>fr.asipsante.api.sign</groupId>
			<artifactId>asip-sign-api</artifactId>
			<version>${asipsign.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!--activate prometheus metrics for springboot app -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-to-slf4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.el</groupId>
			<artifactId>javax.el-api</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<scope>provided</scope> <!-- provided: tomcat/lib/servlet-api.jar -->
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox-version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${springfox-version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-spi</artifactId>
			<version>${springfox-version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-core</artifactId>
			<version>${springfox-version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>27.0.1-jre</version>
		</dependency>

		<!-- XML processing: Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.joschi.jackson</groupId>
			<artifactId>jackson-datatype-threetenbp</artifactId>
			<version>2.6.4</version>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.threeten</groupId>
			<artifactId>threetenbp</artifactId>
			<version>1.3.1</version>
		</dependency>
		<!-- Bean Validation API support -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.albfernandez</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>2.3.2</version>
		</dependency>
		
		<!-- pem util -->
	<!--	<dependency>
    <groupId>org.bouncycastle</groupId>
    <artifactId>bcprov-jdk15on</artifactId>
    <version>1.70</version>
    </dependency>-->
    
  

	</dependencies>
	
	
	<profiles>
	</profiles>
	<repositories>
	
		 
	<!--	<repository>
			<id>in-project</id>
			<name>in-project</name>
			<url>file://${project.basedir}/libs</url>
		</repository>-->
	</repositories>

</project>
